--- a/index.html
+++ b/index.html
@@ -569,3 +569,5 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
+                <p>rwemadominik3@gmail.com</p>
+              </div>
