--- a/index.html
+++ b/index.html
@@ -607,3 +607,4 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
+          </div>
