--- a/index.html
+++ b/index.html
@@ -628,3 +628,4 @@
       <div class="copyright">
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
       </div>
+      <div class="credits">
