--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@
 
 
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
