--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
