--- a/index.html
+++ b/index.html
@@ -49,3 +49,5 @@
 
   </header><!-- End Header -->
 
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
