--- a/index.html
+++ b/index.html
@@ -187,3 +187,5 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Dart<i class="val">91%</i></span>
