--- a/index.html
+++ b/index.html
@@ -230,3 +230,4 @@
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
