--- a/index.html
+++ b/index.html
@@ -268,3 +268,4 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">International Experience</h3>
+            <div class="resume-item">
