--- a/index.html
+++ b/index.html
@@ -278,3 +278,4 @@
                 <li>Cyber security</li>
                 <li>Project Contributions</li>
               </ul>
+            </div>
