--- a/index.html
+++ b/index.html
@@ -285,3 +285,4 @@
               <p><em>Others</em></p>
               <ul>
                 <li>Video Editing</li>
+                <li>Sound Processing</li>
