--- a/index.html
+++ b/index.html
@@ -299,3 +299,5 @@
      <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
+
+        <div class="row">
