--- a/index.html
+++ b/index.html
@@ -305,3 +305,5 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Here are some of the projects I have worked on.</li>
             </ul>
+          </div>
+        </div>
