--- a/index.html
+++ b/index.html
@@ -353,3 +353,4 @@
                   <a href="portfolio-details6.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
+            </div>
