--- a/index.html
+++ b/index.html
@@ -470,3 +470,4 @@
               </div>
               <h4><a href="">Video Editing</a></h4>
               <p>With DaVinci Reserve & Blender</p>
+            </div>
