--- a/index.html
+++ b/index.html
@@ -520,3 +520,5 @@
                 <img src="assets/img/estimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Dohmke Toms</h3>
                 <h4> GitHub DeV Team | Manager</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
