--- a/index.html
+++ b/index.html
@@ -482,3 +482,5 @@
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
+          <h2>Testimonials</h2>
