--- a/index.html
+++ b/index.html
@@ -515,3 +515,5 @@
               </div>
             </div><!-- End testimonial item -->
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
