--- a/index.html
+++ b/index.html
@@ -627,5 +627,6 @@
       </div>
       <div class="copyright">
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
+      </div>
  
  
