--- a/index.html
+++ b/index.html
@@ -628,5 +628,7 @@
       <div class="copyright">
         &copy; <strong><span>Dominique Rwema Bagirishya</span></strong>. All Rights Reserved
       </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
  
  
