--- a/index.html
+++ b/index.html
@@ -630,5 +630,6 @@
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
  
  
