--- a/index.html
+++ b/index.html
@@ -634,5 +634,6 @@
         <!-- Licensing informationslicense-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
 
+      </div>
  
  
