--- a/index.html
+++ b/index.html
@@ -635,5 +635,6 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
 
       </div>
+    </div>
  
  
