--- a/index.html
+++ b/index.html
@@ -641,5 +641,6 @@
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
- z
+  <!-- Vendor JS Files -->
+ 
  
