--- a/index.html
+++ b/index.html
@@ -126,3 +126,5 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6">
+            <div class="count-box">
+              <i class="bi bi-emoji-smile"></i>
